<pre>
2007-05-02:
	* version ???
    * The RSS feed button in the address bar works again
    * reload/stop buttons update enabled state again
	* added marks support (thanks Viktor Kojouharov)
	* temporary shortcut Y to yank current selection (for non UNIX-users)
	* Flashing frame with ]f now works as expected
	* many help fixes (most of them by Doug Kearns)
	* new :reloadall command
	* :hardcopy works now and shows the printing dialog
	* changed "R" to reload without cache instead of reload all due to popular request
	* changed secure sites -> green, broken sites -> red in the statusbar
	* Vimperator now sets the window title, so it's "vimperator.mozdev.org -
	  Vimperator" instead of "vimperator.mozdev.org - Mozilla Firefox"
	  Use :set titlestring=... to change it back (help from Hannes Rist)
	* :tabmove command (by Doug Kearns)
	* 'showstatuslinks' option to control where/if we show the destination of
	a hovered link
	* :version! shows firefox version page
	* hovered links appear in the command line again, not statusbar
	* :help now opens in the current tab even for xhtml pages like "about:"
	* hints work on xhtml pages now (you need to reset the 'hinttags' and
	  'extendedhinttags' settings with :set hinttags& and :set extendedhinttags&)
	* :set option& resets the option to the default value
	* added :tabonly and :tabrewind and :tablast commands and some futher aliases :tabNext, etc. (by Doug Kearns)
	* added vimparator.vim for .vimperatorrc syntax highlighting in the XPI (by Doug Kearns)
	* Added keyword support for bookmarks to the :[tab]open commands
	* many small bug fixes and enhancements

2007-05-02:
	* version 0.4.1
	* Fixed bug that :open google.com/mail opened ".com/mail" in google search
	* made <tab> <up> <down> etc. perform the default action, so menus kinda
	work, and it doesn't beep anymore on tab.
	* added 'defsearch' setting for setting default search engine

2007-05-01:
	* version 0.4