@@ -14,7 +14,6 @@ BUGS:
      webpage, saving  only the html works just fine..
 - <ESC> key closes :addons and other XUL windows
 
-
 FEATURES:
 9 :map commands to keys
 9 :command for new commands
@@ -56,9 +55,6 @@ RANDOM IDEAS:
 * 16:06:04       bartman| maxauthority: feature idea: what if :n and :N searched the 
                         page and if they found a unique <a href=...>.*next.*</a> or <a 
                         href=...>.*prev.*<a/> they would follow that link?
-* 20:12:26         skaar| so, I think get_history_completion effectively will put the oldest 
-                        history entry at the top of the completion list
-  20:12:48         skaar| since you're counting down in the for loop
 * hide scrollbars: http://rafb.net/p/YHRhEe47.html (window.content.document.body.style.overflow = "hidden")
 
 </pre>
